<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="TcoPlsPaletizator_Components" Id="{bbafba16-ae43-49d6-867f-30f3954bb55a}">
    <Declaration><![CDATA[TYPE TcoPlsPaletizator_Components EXTENDS TcoCore.TcoStruct:
STRUCT
	
	{attribute wpf [Container(Layout.Stack)]}
	{attribute addProperty Name "(I1) <#Pritomnost blistra v presuvaci#>"}
	I1_PresentBlisterEntry : TcoElements.TcoDi(THISSTRUCT);
	
	{attribute addProperty Name "(I2) <#Pritomnost medzery medzi blistrami#>"}
	I2_PresentBlisterEntryEmptySpace : TcoElements.TcoDi(THISSTRUCT);
	
	{attribute addProperty Name "(I3) <#Zasobik blistrov prazdny#>"}
	I3_PresentBlistersInBufferEmpty : TcoElements.TcoDi(THISSTRUCT);

	
	{attribute addProperty Name "(I4) <#Pritomnost blistra v pracovnej pozicii#>"}
	I4_PresentBlisterInWorkingPos : TcoElements.TcoDi(THISSTRUCT);
		
	{attribute addProperty Name "(I5) <#Vystupny blister neje v sklzovom dopravniku#>"}
	I5_OutBlistersIsThrowedCorrectly : TcoElements.TcoDi(THISSTRUCT);
	
	{attribute addProperty Name "(I6) <#Vystupny blister snimanie vo vytahu#>"}
	I6_OutBlistersLisftSignal : TcoElements.TcoDi(THISSTRUCT);
	
	{attribute addProperty Name "(I7) <#Vystupny blister je nad Bufferom#>"}
	I7_OutBlistersIsAboveOutBuffer : TcoElements.TcoDi(THISSTRUCT);
	
	{attribute addProperty Name "(I8) <#Vystupny zasobnik je plny#>"}
	I8_OutBlistersBufferIsFull : TcoElements.TcoDi(THISSTRUCT);
	
	
	{attribute wpf [Container(Layout.Stack)]}
	{attribute addProperty Name "(P1) <#Vertikalny prisun vstupnych blistrov#>"}
	P1_VerticalSepareEntryBlisters : TcoPneumatics.TcoCylinder(THISSTRUCT);
	
	{attribute addProperty Name "(P2) <#Vertikalny prisun vstupnych blistrov#>"}
	P2_VerticalSepareEntryBlisters : TcoPneumatics.TcoCylinder(THISSTRUCT);
	
	{attribute addProperty Name "(P3) (P3.1) <#Horizontalny prisun vstupnych blistrov#>"}
	P3_HorizontalSepareEntryBlisters : TcoPneumatics.TcoDoubleCylinder(THISSTRUCT);
		
	{attribute addProperty Name "(P4) <#Prisun vstupneho blistra#>"}
	P4_FeedEntryBlister :TcoPneumatics.TcoCylinder(THISSTRUCT);
	
	{attribute addProperty Name "(P5) (P5.1)<#Horizontalny prisun vystupnych blistrov#>"}
	P5_HorizontalSepareOutBlisters : TcoPneumatics.TcoDoubleCylinder(THISSTRUCT);
	
	{attribute addProperty Name "(P6)<#Vertikalny prisun vystupnych blistrov#>"}
	P6_VerticalSepareOutBlister : TcoPneumatics.TcoCylinder(THISSTRUCT);
	
	{attribute addProperty Name "(P7) <#Podopretie vstupneho blistra#>"}
	P7_SupportEntryBlister : TcoPneumatics.TcoCylinder(THISSTRUCT);
	
	{attribute addProperty Name "(P8) (P8.1) <#Upevnenie zboku vstupneho blistra#>"}
	P8_FixEntryBlisterSide : TcoPneumatics.TcoDoubleCylinder(THISSTRUCT);
	
	{attribute addProperty Name "(P9) (P9.1) <#Zamknutue zhora vstupneho blistra#>"}
	P9_LockEntryBlisterTop : TcoPneumatics.TcoDoubleCylinder(THISSTRUCT);
	
	{attribute addProperty Name "(P10) (P10.1)<#Odelovac blistrov na vstupe#>"}
	P10_HoldEntrySepareOutBlister : TcoPneumatics.TcoDoubleCylinder(THISSTRUCT);
	
	
	
	{attribute wpf [Container(Layout.Stack,"Vseobecne")]}
	
	{attribute addProperty Name "(Q1) <#Signalizacia upozornenia R#>"}
	Q1_AttentionSignalisationR : TcoElements.TcoDo(THISSTRUCT);
	{attribute addProperty Name "(Q2) <#Signalizacia upozornenia G#>"}
	Q2_AttentionSignalisationG : TcoElements.TcoDo(THISSTRUCT);
	{attribute addProperty Name "(Q3) <#Signalizacia upozornenia B#>"}
	Q3_AttentionSignalisationB : TcoElements.TcoDo(THISSTRUCT);

	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>