<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="TcoPlsPaletizator_Config_v_1_x_x" Id="{d90a6bf1-c15a-49b1-9837-078b0d1dec46}">
    <Declaration><![CDATA[TYPE
    TcoPlsPaletizator_Config_v_1_x_x EXTENDS TcoCore.TcoStruct :
    STRUCT

	
        {attribute addProperty Name "<#Stabilizacny cas#>"}
		StabilisationTime : TIME :=T#500MS;
		{attribute addProperty Name "<#Blink period#>"}
		BlinkTime : TIME := T#500MS;
		
        {attribute addProperty Name "<#Zamykanie blistra zhora neaktive (P9)(P9.1)je nepritomne#>"}
		LockBlisterInPickPosInactive : BOOL;
		
		{attribute addProperty Name "<#Oddelovanie blistrov na vstupe neaktive (P10)(P10.1)je nepritomne#>"}
		SepareBlistersAtEntryInactive : BOOL;
    END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>